修复实验分析测试签名适配